fix releases section

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -54,29 +54,31 @@ stages:
 
 releases:
   beta:
-    tag-container-image:
-      image: docker:18.03.1-ce
-      env:
-        DOCKER_HUB_USERNAME: estafette.secret(_0ev7h12O3XFhlhU.Rj3txIB6mwkf0C20nXsvI23w_g_Dw-v8Ug==)
-        DOCKER_HUB_PASSWORD: estafette.secret(3hHwj9FPPLwpdv2d.fp8NYuy1IbCR7MJvT4OeRhYgkDa8BnrkJSSdbA6Cn2gkr6kh)
-        TARGET_TAG: beta
-      commands:
-      - docker login --username=${DOCKER_HUB_USERNAME} --password="${DOCKER_HUB_PASSWORD}"
-      - docker pull extensions/docker:${ESTAFETTE_BUILD_VERSION}
-      - docker tag extensions/docker:${ESTAFETTE_BUILD_VERSION} extensions/docker:${TARGET_TAG}
-      - docker push extensions/docker:${TARGET_TAG}
+    stages:
+      tag-container-image:
+        image: docker:18.03.1-ce
+        env:
+          DOCKER_HUB_USERNAME: estafette.secret(_0ev7h12O3XFhlhU.Rj3txIB6mwkf0C20nXsvI23w_g_Dw-v8Ug==)
+          DOCKER_HUB_PASSWORD: estafette.secret(3hHwj9FPPLwpdv2d.fp8NYuy1IbCR7MJvT4OeRhYgkDa8BnrkJSSdbA6Cn2gkr6kh)
+          TARGET_TAG: beta
+        commands:
+        - docker login --username=${DOCKER_HUB_USERNAME} --password="${DOCKER_HUB_PASSWORD}"
+        - docker pull extensions/docker:${ESTAFETTE_BUILD_VERSION}
+        - docker tag extensions/docker:${ESTAFETTE_BUILD_VERSION} extensions/docker:${TARGET_TAG}
+        - docker push extensions/docker:${TARGET_TAG}
 
   stable:
-    tag-container-image:
-      image: docker:18.03.1-ce
-      env:
-        DOCKER_HUB_USERNAME: estafette.secret(_0ev7h12O3XFhlhU.Rj3txIB6mwkf0C20nXsvI23w_g_Dw-v8Ug==)
-        DOCKER_HUB_PASSWORD: estafette.secret(3hHwj9FPPLwpdv2d.fp8NYuy1IbCR7MJvT4OeRhYgkDa8BnrkJSSdbA6Cn2gkr6kh)
-        TARGET_TAG: stable
-      commands:
-      - docker login --username=${DOCKER_HUB_USERNAME} --password="${DOCKER_HUB_PASSWORD}"
-      - docker pull extensions/docker:${ESTAFETTE_BUILD_VERSION}
-      - docker tag extensions/docker:${ESTAFETTE_BUILD_VERSION} extensions/docker:${TARGET_TAG}
-      - docker push extensions/docker:${TARGET_TAG}
-      - docker tag extensions/docker:${ESTAFETTE_BUILD_VERSION} extensions/docker:latest
-      - docker push extensions/docker:latest
+    stages:
+      tag-container-image:
+        image: docker:18.03.1-ce
+        env:
+          DOCKER_HUB_USERNAME: estafette.secret(_0ev7h12O3XFhlhU.Rj3txIB6mwkf0C20nXsvI23w_g_Dw-v8Ug==)
+          DOCKER_HUB_PASSWORD: estafette.secret(3hHwj9FPPLwpdv2d.fp8NYuy1IbCR7MJvT4OeRhYgkDa8BnrkJSSdbA6Cn2gkr6kh)
+          TARGET_TAG: stable
+        commands:
+        - docker login --username=${DOCKER_HUB_USERNAME} --password="${DOCKER_HUB_PASSWORD}"
+        - docker pull extensions/docker:${ESTAFETTE_BUILD_VERSION}
+        - docker tag extensions/docker:${ESTAFETTE_BUILD_VERSION} extensions/docker:${TARGET_TAG}
+        - docker push extensions/docker:${TARGET_TAG}
+        - docker tag extensions/docker:${ESTAFETTE_BUILD_VERSION} extensions/docker:latest
+        - docker push extensions/docker:latest
