--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -52,7 +52,8 @@ stages:
     channels:
     - '#build-status'
     when:
-      status == 'failed'
+      status == 'failed' ||
+      status == 'succeeded'
 
 releases:
   beta:
