--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -67,6 +67,16 @@ releases:
         tags:
         - beta
 
+      slack-notify:
+        image: extensions/slack-build-status:dev
+        webhook: estafette.secret(eoN9GnRnfeMLL7L0.ThpJZ1iBKSjR93u1IkQu8nm8dgdOrDeZsGkFMB-GPaAfPXUw4zH3kYjHu3rpW2hbZmuVMAviOrqQ-dNmujWOBHWQDMDPvwO2KO884caanb-LGx1CPAFF7qaPZpeU)
+        name: ${ESTAFETTE_LABEL_APP}
+        channels:
+        - '#build-status'
+        when:
+          status == 'failed' ||
+          status == 'succeeded'
+
   stable:
     stages:
       tag-container-image:
@@ -78,3 +88,13 @@ releases:
         tags:
         - stable
         - latest
+
+      slack-notify:
+        image: extensions/slack-build-status:dev
+        webhook: estafette.secret(eoN9GnRnfeMLL7L0.ThpJZ1iBKSjR93u1IkQu8nm8dgdOrDeZsGkFMB-GPaAfPXUw4zH3kYjHu3rpW2hbZmuVMAviOrqQ-dNmujWOBHWQDMDPvwO2KO884caanb-LGx1CPAFF7qaPZpeU)
+        name: ${ESTAFETTE_LABEL_APP}
+        channels:
+        - '#build-status'
+        when:
+          status == 'failed' ||
+          status == 'succeeded'
