--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -24,7 +24,7 @@ stages:
     - go build -a -installsuffix cgo -ldflags "-X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_LABEL_APP} .
 
   bake:
-    image: extensions/docker:dev
+    image: extensions/docker:stable
     action: build
     container: docker
     inline: |
