--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -27,11 +27,13 @@ stages:
     action: build
     container: docker
     inline: |
-      FROM docker:18.09.6
+      FROM scratch
 
       LABEL maintainer="estafette.io"
 
       COPY ${ESTAFETTE_GIT_NAME} /
+
+      ENV PATH="/dod:$PATH"
 
       ENTRYPOINT ["/${ESTAFETTE_GIT_NAME}"]
     repositories:
