--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -22,14 +22,14 @@ stages:
     - go test ./...
     - go build -a -installsuffix cgo -ldflags "-X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
 
-  get-trivy-binary:
+  build-trivy:
     image: golang:1.12.5-alpine3.9
     env:
       TRIVY_VERSION: 0.1.4
       CGO_ENABLED: 0
       GOOS: linux
     commands:
-    - wget https://github.com/knqyf263/trivy/archive/v${TRIVY_VERSION}.tar.gz
+    - wget --no-check-certificate -nv --spider --tries=5 https://github.com/knqyf263/trivy/archive/v${TRIVY_VERSION}.tar.gz
     - tar zxvf v${TRIVY_VERSION}.tar.gz --directory ./trivy-source
     - cd ./trivy-source
     - go build -a -installsuffix cgo -o ../publish/${ESTAFETTE_GIT_NAME} .
