save trivy source as file

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -29,7 +29,7 @@ stages:
       CGO_ENABLED: 0
       GOOS: linux
     commands:
-    - wget --no-check-certificate -nv --spider --tries=5 https://github.com/knqyf263/trivy/archive/v${TRIVY_VERSION}.tar.gz
+    - wget -O v${TRIVY_VERSION}.tar.gz https://github.com/knqyf263/trivy/archive/v${TRIVY_VERSION}.tar.gz
     - ls -latr
     - tar zxvf v${TRIVY_VERSION}.tar.gz --directory ./trivy-source
     - cd ./trivy-source
