--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -29,6 +29,7 @@ stages:
       CGO_ENABLED: 0
       GOOS: linux
     commands:
+    - apk add git
     - wget -O v${TRIVY_VERSION}.tar.gz https://github.com/knqyf263/trivy/archive/v${TRIVY_VERSION}.tar.gz
     - mkdir -p ./trivy-source
     - tar zxvf v${TRIVY_VERSION}.tar.gz --directory ./trivy-source
