--- a/Dockerfile.windowsservercore-1809
+++ b/Dockerfile.windowsservercore-1809
@@ -8,7 +8,7 @@ COPY . C:/gopath/estafette-extension-docker
 
 WORKDIR C:/gopath/estafette-extension-docker
 
-RUN white-host 'Listing network interfaces...'; \
+RUN write-host 'Listing network interfaces...'; \
     netsh interface ipv4 show interfaces; \
     write-host 'Setting mtu size to 1410...'; \
     Get-NetAdapter | Where-Object Name -like "*Ethernet*" | ForEach-Object { & netsh interface ipv4 set subinterface $_.InterfaceIndex mtu=1410 store=persistent }; \
