--- a/Dockerfile.windowsservercore-1809
+++ b/Dockerfile.windowsservercore-1809
@@ -1,25 +1,6 @@
-FROM golang:1.13.0-windowsservercore-1809 as builder
-
-ENV CGO_ENABLED=0 \
-    GOOS=windows \
-    GOARCH=amd64
-
-COPY . C:/gopath/estafette-extension-docker
-
-WORKDIR C:/gopath/estafette-extension-docker
-
-RUN write-host 'Listing network interfaces...'; \
-    netsh interface ipv4 show interfaces; \
-    write-host 'Setting mtu size to 1410...'; \
-    Get-NetAdapter | Where-Object Name -like "*Ethernet*" | ForEach-Object { & netsh interface ipv4 set subinterface $_.InterfaceIndex mtu=1410 store=persistent }; \
-    write-host 'Downloading modules...'; \
-    go mod download; \
-    write-host 'Compiling code...'; \
-    go build -v
-
 FROM mcr.microsoft.com/windows/servercore:1809
 
-COPY --from=builder C:/gopath/estafette-extension-docker/estafette-extension-docker.exe c:/estafette-extension-docker.exe
+COPY estafette-extension-docker.exe c:/estafette-extension-docker.exe
 
 USER ContainerAdministrator
 
