push windows container to docker hub

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -107,7 +107,6 @@ releases:
           GOOS: windows
           GOARCH: amd64
         commands:
-        - netsh interface ipv4 show interfaces
         - go build -v -ldflags "-X main.app=$env:ESTAFETTE_GIT_NAME -X main.version=$env:ESTAFETTE_BUILD_VERSION -X main.revision=$env:ESTAFETTE_GIT_REVISION -X main.branch=$env:ESTAFETTE_GIT_BRANCH -X main.buildDate=$env:ESTAFETTE_BUILD_DATETIME" -o ./publish/$env:ESTAFETTE_GIT_NAME.exe
 
       bake:
@@ -132,15 +131,15 @@ releases:
         repositories:
         - extensions
 
-      # push-to-docker-hub:
-      #   image: extensions/docker:windowsservercore-1809
-      #   action: push
-      #   container: docker
-      #   repositories:
-      #   - extensions
-      #   tags:
-      #   - windowsservercore-1809
-      #   pushVersionTag: false
+      push-to-docker-hub:
+        image: extensions/docker:windowsservercore-1809
+        action: push
+        container: docker
+        repositories:
+        - extensions
+        tags:
+        - windowsservercore-1809
+        pushVersionTag: false
 
   dev:
     triggers:
