allow adding a suffix to the version tag so multiple containers can be built and pushed from the same pipeline

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -124,6 +124,7 @@ releases:
         image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
         action: build
         container: docker-test
+        versionTagSuffix: -suffix
         inline: |
           FROM mcr.microsoft.com/windows/servercore:1809
 
