--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -19,7 +19,7 @@ stages:
       GOOS: linux
     commands:
     - go test ./...
-    - go build -a -installsuffix cgo -ldflags "-X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
+    - go build -a -installsuffix cgo -ldflags "-X main.appgroup=${ESTAFETTE_LABEL_APP_GROUP} -X main.app=${ESTAFETTE_LABEL_APP} -X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
 
   bake:
     image: extensions/docker:stable
@@ -33,7 +33,8 @@ stages:
       COPY ${ESTAFETTE_GIT_NAME} /
       COPY ca-certificates.crt /etc/ssl/certs/
 
-      ENV PATH="/dod:$PATH"
+      ENV PATH="/dod:$PATH" \
+          ESTAFETTE_LOG_FORMAT="console"
 
       ENTRYPOINT ["/${ESTAFETTE_GIT_NAME}"]
     repositories:
