install github.com/wagoodman/dive and add dive action

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -55,6 +55,9 @@ stages:
       COPY ${ESTAFETTE_GIT_NAME} /
       COPY ca-certificates.crt /etc/ssl/certs/
 
+      RUN wget -qO- https://github.com/wagoodman/dive/releases/download/v0.9.1/dive_0.9.1_linux_amd64.tar.gz | tar xvz - -C / \
+          && /dive version
+
       ENTRYPOINT ["/${ESTAFETTE_GIT_NAME}"]
     repositories:
     - extensions
