--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -35,7 +35,7 @@ stages:
       RUN wget -O- https://github.com/aquasecurity/trivy/releases/download/v0.3.1/trivy_0.3.1_Linux-64bit.tar.gz | \
           tar -xzf - -C / \
           && /trivy --version \
-          && trivy --light --download-db-only
+          && /trivy --light --download-db-only
 
       FROM scratch
 
