--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -13,7 +13,7 @@ version:
 
 stages:
   build:
-    image: golang:1.13.0-alpine3.10
+    image: golang:1.13.5-alpine3.10
     env:
       CGO_ENABLED: 0
       GOOS: linux
@@ -35,7 +35,7 @@ stages:
       RUN wget -O- https://github.com/aquasecurity/trivy/releases/download/v0.3.1/trivy_0.3.1_Linux-64bit.tar.gz | \
           tar -xzf - -C / \
           && /trivy --version \
-          && /trivy --light --download-db-only --cache-dir /trivy-cache
+          && /trivy --light --no-progress --download-db-only --cache-dir /trivy-cache
 
       FROM scratch
 
@@ -105,10 +105,9 @@ stages:
       test-trivy:
         image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
         action: trivy
-        container: estafette-ci-builder
-        tag: stable
+        container: docker
         repositories:
-        - estafette
+        - extensions
 
   push-to-docker-hub:
     image: extensions/docker:stable
