--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -30,7 +30,7 @@ stages:
 
       ARG DIVE_VERSION=0.9.1
 
-      RUN wget -O- https://github.com/wagoodman/dive/releases/download/v${DIVE_VERSION}/dive_{DIVE_VERSION}_linux_amd64.tar.gz | \
+      RUN wget -O- https://github.com/wagoodman/dive/releases/download/v${DIVE_VERSION}/dive_S{DIVE_VERSION}_linux_amd64.tar.gz | \
           tar -xzf - -C / \
           && /dive version
 
