save docker image to file before scanning with trivy

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -52,8 +52,7 @@ stages:
       COPY --from=0 /trivy-cache /trivy-cache
 
       ENV PATH="/dod:$PATH" \
-          ESTAFETTE_LOG_FORMAT="console" \
-          DOCKER_API_VERSION="1.40"
+          ESTAFETTE_LOG_FORMAT="console"
 
       ENTRYPOINT ["/${ESTAFETTE_GIT_NAME}"]
     repositories:
