--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -34,13 +34,13 @@ stages:
           tar -xzf - -C / \
           && /dive version
 
-      ARG TRIVY_VERSION=0.7.0
+      ARG TRIVY_VERSION=0.8.0
 
       RUN wget -O- https://github.com/aquasecurity/trivy/releases/download/v${TRIVY_VERSION}/trivy_${TRIVY_VERSION}_Linux-64bit.tar.gz | \
           tar -xzf - -C / \
           && /trivy --version \
-          && /trivy --light --no-progress --download-db-only --cache-dir /trivy-cache \
-          && /trivy --severity CRITICAL --light --skip-update --no-progress --ignore-unfixed --cache-dir /trivy-cache alpine:3.11
+          && /trivy image --light --no-progress --download-db-only --cache-dir /trivy-cache \
+          && /trivy image --severity CRITICAL --light --skip-update --no-progress --ignore-unfixed --cache-dir /trivy-cache alpine:3.11
 
       FROM scratch
 
