build nanoserver image; use estafette/golang nanoserver image

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -157,13 +157,14 @@ releases:
     clone: true
     stages:
       build:
-        image: estafette/golang:1.15.6-windowsservercore-ltsc2019
+        image: estafette/golang:1.15.7-nanoserver-1809
+        shell: cmd
         env:
           CGO_ENABLED: 0
           GOOS: windows
           GOARCH: amd64
         commands:
-        - go build -v -ldflags "-X main.app=$env:ESTAFETTE_GIT_NAME -X main.version=$env:ESTAFETTE_BUILD_VERSION -X main.revision=$env:ESTAFETTE_GIT_REVISION -X main.branch=$env:ESTAFETTE_GIT_BRANCH -X main.buildDate=$env:ESTAFETTE_BUILD_DATETIME" -o ./publish/$env:ESTAFETTE_GIT_NAME.exe
+        - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
 
       bake:
         image: extensions/docker:windowsservercore-ltsc2019
@@ -173,7 +174,7 @@ releases:
         container: docker
         repositories:
         - extensions
-        dockerfile: Dockerfile.windowsservercore-ltsc2019
+        dockerfile: Dockerfile.nanoserver-1809
         path: ./publish
 
       test:
@@ -195,7 +196,7 @@ releases:
         repositories:
         - extensions
         tags:
-        - windowsservercore-ltsc2019
+        - nanoserver-1809
         pushVersionTag: false
 
   dev:
