use ./ when copying files into windows container

--- a/Dockerfile.nanoserver-1809
+++ b/Dockerfile.nanoserver-1809
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/windows/nanoserver:1809
 
-COPY estafette-extension-docker.exe C:/estafette-extension-docker.exe
+COPY ./estafette-extension-docker.exe C:/estafette-extension-docker.exe
 
 ENV ESTAFETTE_LOG_FORMAT="console"
 
