--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -164,10 +164,11 @@ releases:
           GOOS: windows
           GOARCH: amd64
         commands:
+        - netsh interface ipv4 set subinterface 31 mtu=1410
         - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
 
       bake:
-        image: extensions/docker:windowsservercore-ltsc2019
+        image: extensions/docker:nanoserver-1809
         action: build
         no-cache: true
         expand-variables: false
@@ -190,7 +191,7 @@ releases:
         - extensions
 
       push-to-docker-hub:
-        image: extensions/docker:windowsservercore-ltsc2019
+        image: extensions/docker:nanoserver-1809
         action: push
         container: docker
         repositories:
