--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -151,54 +151,6 @@ stages:
       status == 'failed'
 
 releases:
-  windows:
-    builder:
-      os: windows
-    clone: true
-    stages:
-      build:
-        image: estafette/golang:1.15.7-nanoserver-1809
-        shell: cmd
-        env:
-          CGO_ENABLED: 0
-          GOOS: windows
-          GOARCH: amd64
-        commands:
-        - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
-
-      bake:
-        image: extensions/docker:nanoserver-1809
-        action: build
-        no-cache: true
-        expand-variables: false
-        container: docker
-        repositories:
-        - extensions
-        dockerfile: Dockerfile.nanoserver-1809
-        path: ./publish
-
-      test:
-        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
-        action: build
-        container: docker-test
-        versionTagSuffix: -suffix
-        inline: |
-          FROM mcr.microsoft.com/windows/nanoserver:1809
-
-          RUN netsh interface ipv4 show interfaces
-        repositories:
-        - extensions
-
-      push-to-docker-hub:
-        image: extensions/docker:nanoserver-1809
-        action: push
-        container: docker
-        repositories:
-        - extensions
-        tags:
-        - nanoserver-1809
-        pushVersionTag: false
-
   dev:
     triggers:
     - pipeline:
@@ -254,3 +206,148 @@ releases:
         when:
           status == 'succeeded' ||
           status == 'failed'
+
+  nanoserver-1809-dev:
+    builder:
+      os: windows
+    clone: true
+    stages:
+      build:
+        image: estafette/golang:1.15.7-nanoserver-1809
+        shell: cmd
+        env:
+          CGO_ENABLED: 0
+          GOOS: windows
+          GOARCH: amd64
+        commands:
+        - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
+
+      bake:
+        image: extensions/docker:nanoserver-1809
+        action: build
+        no-cache: true
+        expand-variables: false
+        container: docker
+        repositories:
+        - extensions
+        dockerfile: Dockerfile.nanoserver-1809
+        path: ./publish
+
+      test:
+        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
+        action: build
+        container: docker-test
+        versionTagSuffix: -suffix
+        inline: |
+          FROM mcr.microsoft.com/windows/nanoserver:1809
+
+          RUN netsh interface ipv4 show interfaces
+        repositories:
+        - extensions
+
+      push-to-docker-hub:
+        image: extensions/docker:nanoserver-1809
+        action: push
+        container: docker
+        repositories:
+        - extensions
+        tags:
+        - nanoserver-1809-dev
+        pushVersionTag: false
+
+  nanoserver-1809-beta:
+    builder:
+      os: windows
+    clone: true
+    stages:
+      build:
+        image: estafette/golang:1.15.7-nanoserver-1809
+        shell: cmd
+        env:
+          CGO_ENABLED: 0
+          GOOS: windows
+          GOARCH: amd64
+        commands:
+        - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
+
+      bake:
+        image: extensions/docker:nanoserver-1809
+        action: build
+        no-cache: true
+        expand-variables: false
+        container: docker
+        repositories:
+        - extensions
+        dockerfile: Dockerfile.nanoserver-1809
+        path: ./publish
+
+      test:
+        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
+        action: build
+        container: docker-test
+        versionTagSuffix: -suffix
+        inline: |
+          FROM mcr.microsoft.com/windows/nanoserver:1809
+
+          RUN netsh interface ipv4 show interfaces
+        repositories:
+        - extensions
+
+      push-to-docker-hub:
+        image: extensions/docker:nanoserver-1809
+        action: push
+        container: docker
+        repositories:
+        - extensions
+        tags:
+        - nanoserver-1809-beta
+        pushVersionTag: false
+
+  nanoserver-1809-stable:
+    builder:
+      os: windows
+    clone: true
+    stages:
+      build:
+        image: estafette/golang:1.15.7-nanoserver-1809
+        shell: cmd
+        env:
+          CGO_ENABLED: 0
+          GOOS: windows
+          GOARCH: amd64
+        commands:
+        - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
+
+      bake:
+        image: extensions/docker:nanoserver-1809
+        action: build
+        no-cache: true
+        expand-variables: false
+        container: docker
+        repositories:
+        - extensions
+        dockerfile: Dockerfile.nanoserver-1809
+        path: ./publish
+
+      test:
+        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
+        action: build
+        container: docker-test
+        versionTagSuffix: -suffix
+        inline: |
+          FROM mcr.microsoft.com/windows/nanoserver:1809
+
+          RUN netsh interface ipv4 show interfaces
+        repositories:
+        - extensions
+
+      push-to-docker-hub:
+        image: extensions/docker:nanoserver-1809
+        action: push
+        container: docker
+        repositories:
+        - extensions
+        tags:
+        - nanoserver-1809
+        - nanoserver-1809-stable
+        pushVersionTag: false
