--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -210,6 +210,7 @@ releases:
   nanoserver-1809-dev:
     builder:
       os: windows
+      track: nanoserver-1809-dev
     clone: true
     stages:
       build:
@@ -223,7 +224,7 @@ releases:
         - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
 
       bake:
-        image: extensions/docker:nanoserver-1809
+        image: extensions/docker:nanoserver-1809-stable
         action: build
         no-cache: true
         expand-variables: false
@@ -246,7 +247,7 @@ releases:
         - extensions
 
       push-to-docker-hub:
-        image: extensions/docker:nanoserver-1809
+        image: extensions/docker:nanoserver-1809-stable
         action: push
         container: docker
         repositories:
@@ -258,6 +259,7 @@ releases:
   nanoserver-1809-beta:
     builder:
       os: windows
+      track: nanoserver-1809-dev
     clone: true
     stages:
       build:
@@ -271,7 +273,7 @@ releases:
         - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
 
       bake:
-        image: extensions/docker:nanoserver-1809
+        image: extensions/docker:nanoserver-1809-stable
         action: build
         no-cache: true
         expand-variables: false
@@ -294,7 +296,7 @@ releases:
         - extensions
 
       push-to-docker-hub:
-        image: extensions/docker:nanoserver-1809
+        image: extensions/docker:nanoserver-1809-stable
         action: push
         container: docker
         repositories:
@@ -306,6 +308,7 @@ releases:
   nanoserver-1809-stable:
     builder:
       os: windows
+      track: nanoserver-1809-dev
     clone: true
     stages:
       build:
@@ -319,7 +322,7 @@ releases:
         - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
 
       bake:
-        image: extensions/docker:nanoserver-1809
+        image: extensions/docker:nanoserver-1809-stable
         action: build
         no-cache: true
         expand-variables: false
@@ -342,12 +345,11 @@ releases:
         - extensions
 
       push-to-docker-hub:
-        image: extensions/docker:nanoserver-1809
+        image: extensions/docker:nanoserver-1809-stable
         action: push
         container: docker
         repositories:
         - extensions
         tags:
-        - nanoserver-1809
         - nanoserver-1809-stable
         pushVersionTag: false
